--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Selve Restourant</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Italianno:wght@400&family=Roboto:wght@400&family=Manrope:wght@400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
